--- a/server/static/internal/error.html
+++ b/server/static/internal/error.html
@@ -16,12 +16,7 @@
       color: white;
       text-shadow: 0 0 4px black;
       font-family: cursive;
-    }
-    .background {
-      position: fixed;
-      min-width: 100vw;
-      min-height: 100vh;
-      z-index: -1000;
+      background-color: grey;
     }
     .center {
       position: absolute;
@@ -37,7 +32,6 @@
   </style>
 </head>
 <body>
-  <img class='background center' src='https://i.imgur.com/0G5nOSG.jpg'/>
   <div class='center'>
     <h1>There's been an error.</h1>
     <a href='/'>Return Home</a>
